# SFML-Template

./: CMakeLists.txt  main.cpp
